// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Badge component Badge snapshot test should render correctly for a blue badge 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-1kihuf0 r-borderRadius-1tw7wh r-height-1472mwg r-justifyContent-1777fci r-minWidth-lp5zef r-paddingInline-is05cd r-backgroundColor-o6kplv"
  dir={null}
>
  <div
    className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-uz4sb0 r-lineHeight-hbpseb r-color-jwli3a"
    dir="auto"
  >
    5
  </div>
</div>
`;

exports[`Badge component Badge snapshot test should render correctly for a grey badge 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-1kihuf0 r-borderRadius-1tw7wh r-height-1472mwg r-justifyContent-1777fci r-minWidth-lp5zef r-paddingInline-is05cd r-backgroundColor-1v0ekwd"
  dir={null}
>
  <div
    className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-uz4sb0 r-lineHeight-hbpseb r-color-hiecfz"
    dir="auto"
  >
    5
  </div>
</div>
`;

exports[`Badge component Badge snapshot test should render correctly passing number 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-1kihuf0 r-borderRadius-1tw7wh r-height-1472mwg r-justifyContent-1777fci r-minWidth-lp5zef r-paddingInline-is05cd r-backgroundColor-1v0ekwd"
  dir={null}
>
  <div
    className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-uz4sb0 r-lineHeight-hbpseb r-color-hiecfz"
    dir="auto"
  >
    5
  </div>
</div>
`;

exports[`Badge component Badge snapshot test should render correctly passing text 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-alignSelf-1kihuf0 r-borderRadius-1tw7wh r-height-1472mwg r-justifyContent-1777fci r-minWidth-lp5zef r-paddingInline-is05cd r-backgroundColor-1v0ekwd"
  dir={null}
>
  <div
    className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-uz4sb0 r-lineHeight-hbpseb r-color-hiecfz"
    dir="auto"
  >
    2
  </div>
</div>
`;
